part_2/config/app_01_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-01
  labels:
    app: app1
spec:
  selector:
    matchLabels:
      app: app1
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app01-nginx-html
              mountPath: /usr/share/nginx/html
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: app01-nginx-html
          configMap:
            name: app01-nginx-index-html
