part_2/config/app_01_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-01-service
spec:
  selector:
    app: app1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
