part_2/config/app_02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-02-service
spec:
  selector:
    app: app2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
