part_2/config/app_03_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-03-service
spec:
  selector:
    app: app3
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
