part_2/config/apps_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    apps.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-01-service
            port:
              number: 80
  - host: app2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-02-service
            port:
              number: 80
  - http: # Default fallback rule for unmatched hosts
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-03-service
            port:
              number: 80
